Fiz funcionar O cadastro do evento